--- a/pagina.html
+++ b/pagina.html
@@ -7,6 +7,9 @@
     <body>
         
         <h1>hola probando página</h1>
+        <h2>veamos el precio de la play 5</h2>
+
+
 
         <script src="script.js"></script>
 
